<resources>
    <string name="app_name">விழி தமிழ்</string>
    <string name="app_icon">App Icon</string>
    <string name="initializing">துவங்குகிறது…</string>
    <string name="check_trained_model">பயிற்சி பெற்ற மாதிரிகளை சரிபார்க்கிறது</string>
    <string name="downloading_data">Tesseract தரவு பதிவிறக்கபடுகிறது</string>
    <string name="verification_completed">சரிபார்ப்பு முடிந்தது</string>
    <string name="downloading_lang_data">%s தரவைப் பதிவிறக்குகிறது.</string>
    <string name="error_string">ஏதோ பிழை ஏற்பட்டுள்ளது\nதயவுசெய்து பின்னர் மீண்டும் முயற்சிக்கவும்.</string>
    <string name="network_error">இணைய இணைப்பை சரிபார்க்கவும்.</string>
    <string name="choose_pdf">PDF\'ஐ தேர்வு செய்யவும்.</string>
    <string name="capture_image">படம் பிடிக்க</string>
    <string name="recent_files">சமீபத்திய கோப்புகள்</string>
    <string name="settings">அமைப்புகள்</string>
    <string name="source_code">மூல நிரல்</string>
    <string name="open_sources">மூன்றாம் தரப்பு நூலகங்கள்</string>
    <string name="share_app">செயலியை பகிரவும்</string>
    <string name="share_text">Vizhi Tamil செயலி படங்கள் மற்றும் PDF கோப்புகளிலுள்ள உரைகளை பிரித்து கொடுக்கும். இது பார்வை மாற்று திறனாளிகள் இலவசமாக பயன்படுத்தி பயன்பெரும் வகையில் வடிவமைக்கப்பட்டுள்ளது.\n%s</string>
    <string name="privacy_policy">தனியுரிமைக் கொள்கை</string>
    <string name="powered_by">Powered by</string>
    <string name="kaniyam_foundation">கணியம் அறக்கட்டளை</string>
    <string name="kaniyam_foundation_desc"><![CDATA[<p><b>தொலை நோக்கு – Vision</b><br>தமிழ் மொழி மற்றும் இனக்குழுக்கள் சார்ந்த மெய்நிகர்வளங்கள், கருவிகள் மற்றும் அறிவுத்தொகுதிகள், அனைவருக்கும்  கட்டற்ற அணுக்கத்தில் கிடைக்கும் சூழல்
<br><b>பணி இலக்கு  – Mission</b><br>அறிவியல் மற்றும் சமூகப் பொருளாதார வளர்ச்சிக்கு ஒப்ப, தமிழ் மொழியின் பயன்பாடு வளர்வதை உறுதிப்படுத்துவதும், அனைத்து அறிவுத் தொகுதிகளும், வளங்களும் கட்டற்ற அணுக்கத்தில் அனைவருக்கும் கிடைக்கச்செய்தலும்.<br>
<a>https://kaniyam.com</a></p>]]></string>
    <string name="vglug_foundation">VGLUG அறக்கட்டளை</string>
    <string name="vglug_foundation_desc"><![CDATA[<p>விழுப்புரம் குனு/லினக்ஸ் பயனர்கள் குழு (VGLUG) என்பது 2013 ஆம் ஆண்டில் தொடங்கப்பட்ட ஒரு இலாப நோக்கற்ற அமைப்பாகும். இந்த அமைப்பு ஒரு சமூக இயக்கமாகும். இது கட்டற்ற மென்பொருள் தத்துவத்தின் சாரத்துடன் அறிவியல் மற்றும் சமூகப் பொருளாதார வளர்ச்சிக்கு ஏற்ப FOSS தத்துவத்தினை மக்களிடையே கொண்டு சேர்க்கும் வேலையை செய்துவருகிறது.
    <br>
<a>https://vglug.org</a></p>]]></string>
    <string name="version">பதிப்பு: %s</string>
    <string name="thumbnail">Thumbnail</string>
    <string name="delete_scan">கோப்பை அழி</string>
    <string name="no_recent_scan">சமீபத்திய கோப்புகள்\nஎதுவும் இல்லை</string>
    <string name="page">பக்கம்: %d</string>
    <string name="accuracy">துல்லியத்தன்மை: </string>
    <string name="next_page">அடுத்த பக்கம்</string>
    <string name="previous_page">முந்தைய பக்கம்</string>
    <string name="contributors">பங்களிப்பாளர்கள்</string>
    <string name="loading">காத்திருக்கவும்…</string>
    <string name="close_page_message">இந்தப் பக்கத்தை மூட வேண்டுமா?</string>
    <string name="yes">ஆம்</string>
    <string name="no">வேண்டாம்</string>
    <string name="exceed_maximum_page_title">அதிகபட்ச பக்க எண்ணிக்கை</string>
    <string name="exceed_maximum_page">தற்போது, %d பக்கங்களுக்கு மேல் உள்ள PDF-ஐ நாங்கள் அனுமதிப்பதில்லை. தயவு செய்து வேறு PDF-ஐ தேர்வு செய்யவும்</string>
    <string name="close">மூடு</string>
    <string name="conversion_complete">தரவு\nமாற்றம் முடிந்தது…</string>
    <string name="converting">தரவு\nமாற்றப்படுகிறது…</string>
    <string name="terms_amp_conditions">விதிமுறைகள் மற்றும் நிபந்தனைகள்</string>
    <string name="english">ஆங்கில</string>
    <string name="tamil">தமிழ்</string>
</resources>
