<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:isScrollContainer="true"
    android:orientation="vertical">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        app:elevation="@dimen/margin_5dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:contentInsetStartWithNavigation="0dp"
            app:navigationIcon="@drawable/ic_round_arrow_back_24"
            app:navigationIconTint="@color/white"
            app:title="@string/settings"
            app:titleTextAppearance="@style/TextAppearance.Title"
            app:titleTextColor="@color/white" />
    </com.google.android.material.appbar.AppBarLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/bodyLayout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:paddingStart="@dimen/margin_20dp"
        android:paddingEnd="@dimen/margin_20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/appBar">

        <ScrollView
            android:id="@+id/scrollView"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:scrollbars="none"
            app:layout_constraintBottom_toTopOf="@id/txtAppVersion"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingBottom="@dimen/margin_60dp">

                <LinearLayout
                    android:id="@+id/rlOSSLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="?attr/selectableItemBackground"
                    android:orientation="vertical"
                    android:paddingTop="@dimen/margin_15dp"
                    android:paddingBottom="@dimen/margin_15dp">

                    <com.google.android.material.textview.MaterialTextView
                        android:id="@+id/txtLabelOSS"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:drawablePadding="24dp"
                        android:gravity="center_vertical"
                        android:text="@string/open_sources"
                        android:textAppearance="?attr/textAppearanceBody2"
                        app:drawableStartCompat="@drawable/ic_oss"
                        app:fontFamily="@font/madurai" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/rlSourceCodeLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="?attr/selectableItemBackground"
                    android:orientation="vertical"
                    android:paddingTop="@dimen/margin_15dp"
                    android:paddingBottom="@dimen/margin_15dp">

                    <com.google.android.material.textview.MaterialTextView
                        android:id="@+id/txtLabelSourceCode"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:drawablePadding="24dp"
                        android:gravity="center_vertical"
                        android:text="@string/source_code"
                        android:textAppearance="?attr/textAppearanceBody2"
                        app:drawableStartCompat="@drawable/ic_git"
                        app:fontFamily="@font/madurai" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/llShareApp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="?attr/selectableItemBackground"
                    android:orientation="vertical"
                    android:paddingTop="@dimen/margin_15dp"
                    android:paddingBottom="@dimen/margin_15dp">

                    <com.google.android.material.textview.MaterialTextView
                        android:id="@+id/txtShareApp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:drawablePadding="24dp"
                        android:gravity="center_vertical"
                        android:text="@string/share_app"
                        android:textAppearance="?attr/textAppearanceBody2"
                        app:drawableStartCompat="@drawable/ic_round_share_24"
                        app:fontFamily="@font/madurai" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/llPrivacyPolicy"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="?attr/selectableItemBackground"
                    android:orientation="vertical"
                    android:paddingTop="@dimen/margin_15dp"
                    android:paddingBottom="@dimen/margin_15dp">

                    <com.google.android.material.textview.MaterialTextView
                        android:id="@+id/txtPrivacy"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:drawablePadding="24dp"
                        android:gravity="center_vertical"
                        android:text="@string/privacy_policy"
                        android:textAppearance="?attr/textAppearanceBody2"
                        app:drawableStartCompat="@drawable/ic_round_policy_24"
                        app:fontFamily="@font/madurai" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/llTermsCondition"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="?attr/selectableItemBackground"
                    android:orientation="vertical"
                    android:paddingTop="@dimen/margin_15dp"
                    android:paddingBottom="@dimen/margin_15dp">

                    <com.google.android.material.textview.MaterialTextView
                        android:id="@+id/txtTermsCondition"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:drawablePadding="@dimen/padding_24dp"
                        android:gravity="center_vertical"
                        android:text="@string/terms_amp_conditions"
                        android:textAppearance="?attr/textAppearanceBody2"
                        app:drawableStartCompat="@drawable/ic_round_text_24"
                        app:fontFamily="@font/madurai" />
                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/margin_1dp"
                    android:background="@android:color/black" />
            </LinearLayout>
        </ScrollView>

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/txtAppVersion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="@dimen/padding_5dp"
            android:textAppearance="?attr/textAppearanceCaption"
            app:fontFamily="@font/madurai"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>